Hecho hasta ahora

--- a/06-WPFSample/WPFSample-BL/WPFSample-BL.csproj
+++ b/06-WPFSample/WPFSample-BL/WPFSample-BL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Listados\clsListadosBL.cs" />
+    <Compile Include="Manejadoras\clsManejadoraPersonaBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
