--- a/06-WPFSample/WPFSample-DAL/WPFSample-DAL.csproj
+++ b/06-WPFSample/WPFSample-DAL/WPFSample-DAL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Conexion\clsMyConnection.cs" />
     <Compile Include="Listados\clsListadosDAL.cs" />
+    <Compile Include="Manejadoras\clsManejadoraPersonaDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
