--- a/06-WPFSample/WPFSample-UI/WPFSample-UI.csproj
+++ b/06-WPFSample/WPFSample-UI/WPFSample-UI.csproj
@@ -128,6 +128,7 @@
     <Content Include="scripts\jquery.validate.min.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Views\Home\paginaError.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +146,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -155,12 +158,15 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WPFSample-BL\WPFSample-BL.csproj">
       <Project>{087E0111-C1F7-4721-8667-B714BE80E159}</Project>
       <Name>WPFSample-BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WPFSample-ET\WPFSample-ET.csproj">
+      <Project>{597bbdf4-d610-4226-a01f-94d3a115725c}</Project>
+      <Name>WPFSample-ET</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
